option java_package = "eu.fbk.mpba.sensorsflows.plugins.outputs.litix";

message SensorData {
    required int32 sensor_id = 1;
    required int64 timestamp = 2;
    repeated double value = 3 [packed=true];
}

message SensorEvent {
    required int32 sensor_id_fk = 1;
    required int64 timestamp = 2;
    required int32 code = 2;
    required string message = 3;
}

message SensorInfo {
    required int32 sensor_id = 1;
    optional string device = 2;
    optional string type = 3;
    required string name = 4;
    repeated string channels = 5;
}

message SessionMeta {
    required string key = 1;
    required string value = 2;
}

message TrackSplit {
    required string track_name = 1;
    repeated SensorInfo sensors = 2 [packed=true];
    repeated SensorData data = 3 [packed=true];
    repeated SensorEvent events = 4 [packed=true];
    repeated SessionMeta meta= 5 [packed=true];
}
